force-app/main/default/objects/Lead__c/fields/Abbreviations_Name_ENG__c.field-meta.xml
<CustomField>
    <fullName>Abbreviations_Name_ENG__c</fullName>
    <label>Abbreviations Name (ENG)</label>
    <type>TextArea</type>
</CustomField>