force-app/main/default/objects/Lead__c/fields/Abbreviations_Name_VN__c.field-meta.xml
<CustomField>
    <fullName>Abbreviations_Name_VN__c</fullName>
    <label>Abbreviations Name (VN)</label>
    <type>TextArea</type>
</CustomField>