force-app/main/default/objects/Lead__c/fields/Company_Address__c.field-meta.xml
<CustomField>
    <fullName>Company_Address__c</fullName>
    <label>Company Address (ENG)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>