force-app/main/default/objects/Lead__c/fields/Company_Address_VN__c.field-meta.xml
<CustomField>
    <fullName>Company_Address_VN__c</fullName>
    <label>Company Address (VN)</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>