force-app/main/default/objects/Lead__c/fields/Company_Address_VN_fomula__c.field-meta.xml
<CustomField>
    <fullName>Company_Address_VN_fomula__c</fullName>
    <label>Company Address VN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>