force-app/main/default/objects/Lead__c/fields/Head_office_address__c.field-meta.xml
<CustomField>
    <fullName>Head_office_address__c</fullName>
    <label>Head office address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>