force-app/main/default/objects/Lead__c/fields/HeadOfficeAddressNotUse__c.field-meta.xml
<CustomField>
    <fullName>HeadOfficeAddressNotUse__c</fullName>
    <label>Head Office Address (Notuse)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>