force-app/main/default/objects/Lead__c/fields/Is_convert__c.field-meta.xml
<CustomField>
    <fullName>Is_convert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is convert?</label>
    <type>Checkbox</type>
</CustomField>