force-app/main/default/objects/Lead__c/fields/NVOCC_License_No__c.field-meta.xml
<CustomField>
    <fullName>NVOCC_License_No__c</fullName>
    <label>NVOCC License No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>