force-app/main/default/objects/Lead__c/validationRules/CompanyAddressNotNull_CheckDup.validationRule-meta.xml
<ValidationRule>
    <fullName>CompanyAddressNotNull_CheckDup</fullName>
    <active>true</active>
    <errorConditionFormula>RecordType.DeveloperName = &quot;Agency&quot; &amp;&amp;

 ISNEW() &amp;&amp;

 ISBLANK( Company_Address__c ) &amp;&amp;
ISBLANK(  Company_Address_VN__c )</errorConditionFormula>
    <errorMessage>Due to this Lead is Agent. Please input Company Address (ENG) or Company Address (VN) for checking duplicate rule</errorMessage>
</ValidationRule>