force-app/main/default/objects/Lead__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CompanyName__c</columns>
    <columns>TaxCode__c</columns>
    <columns>Type_of_Establish__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Lead_Status__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>