force-app/main/default/objects/Lead__c/listViews/Lead_Agent.listView-meta.xml
<ListView>
    <fullName>Lead_Agent</fullName>
    <columns>NAME</columns>
    <columns>TaxCode__c</columns>
    <columns>Date_of_Establishment__c</columns>
    <columns>NVOCC_License_No__c</columns>
    <columns>Fowarding_Accociation__c</columns>
    <columns>Company_Address__c</columns>
    <columns>HeadOfficeAddressNotUse__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead__c.Agency</value>
    </filters>
    <label>Lead - Agent</label>
</ListView>