force-app/main/default/objects/Lead__c/listViews/Lead_All.listView-meta.xml
<ListView>
    <fullName>Lead_All</fullName>
    <columns>NAME</columns>
    <columns>CompanyName__c</columns>
    <columns>Company_Address__c</columns>
    <columns>HeadOfficeAddressNotUse__c</columns>
    <columns>TaxCode__c</columns>
    <columns>Business_Type__c</columns>
    <columns>Business_Industry__c</columns>
    <columns>Sales_Owner__c</columns>
    <filterScope>Everything</filterScope>
    <label>Lead (All)</label>
</ListView>