force-app/main/default/objects/Lead__c/listViews/Lead_Supplier.listView-meta.xml
<ListView>
    <fullName>Lead_Supplier</fullName>
    <columns>NAME</columns>
    <columns>CompanyName__c</columns>
    <columns>Company_Address__c</columns>
    <columns>HeadOfficeAddressNotUse__c</columns>
    <columns>TaxCode__c</columns>
    <columns>Business_Type__c</columns>
    <columns>Business_Industry__c</columns>
    <columns>Sales_Owner__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Lead_Status__c</field>
        <operation>equals</operation>
        <value>Created</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead__c.Supplier</value>
    </filters>
    <label>Lead - Supplier</label>
</ListView>